Updated nav bar; no more home logo

--- a/index.html
+++ b/index.html
@@ -5,42 +5,42 @@
 
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../website-files/assets/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 </head>
 
 <!-- Navigation Bar -->
 <nav class="navbar">
     <ul>
-        <li><a href="index.html"><img src="website-images/signal-logo.jpg" alt="" width="20" height="20"></a></li>
+        <li><a href="index.html">HOME</a></li>
         
         <li><a href="about.html">ABOUT</a></li>
         <li><a>MUSIC</a>
             <ul id="dropdown">
-                <li><a href="../website-files/music-subpages/musical-works.html">MUSICAL WORKS</a></li>
-                <li><a href="../website-files/music-subpages/orch-arrangments.html">ORCHESTRAL ARRANGEMENTS</a></li>
-                <li><a href="../website-files/music-subpages/scores.html">SCORES</a></li>
+                <li><a href="music-subpages/musical-works.html">MUSICAL WORKS</a></li>
+                <li><a href="music-subpages/orch-arrangments.html">ORCHESTRAL ARRANGEMENTS</a></li>
+                <li><a href="music-subpages/scores.html">SCORES</a></li>
             </ul>
         </li>
         <li><a>MUSIC & ENGINEERING</a>
             <ul id="dropdown">
-                <li><a href="../website-files/music-eng-subpages/publication-science.html">PUBLICATION IN SCIENCE</a></li>
-                <li><a href="../website-files/music-eng-subpages/cantovario.html">CANTOVARIO</a></li>
-                website                <li><a href="../website-files/music-eng-subpages/engineers-orchestra.html">ENGINEERS' ORCHESTRA</a></li>
+                <li><a href="music-eng-subpages/publication-science.html">PUBLICATION IN SCIENCE</a></li>
+                <li><a href="music-eng-subpages/cantovario.html">CANTOVARIO</a></li>
+                website                <li><a href="music-eng-subpages/engineers-orchestra.html">ENGINEERS' ORCHESTRA</a></li>
             </ul>
         </li>
         <li><a>ENGINEERING</a>
             <ul id="dropdown">
-                <li><a href="../website-files/eng-subpages/masters.html">MASTER'S THESIS</a></li>
-                <li><a href="../website-files/eng-subpages/patents-trademarks.html">PATENTS & TRADEMARKS</a></li>
+                <li><a href="eng-subpages/masters.html">MASTER'S THESIS</a></li>
+                <li><a href="eng-subpages/patents-trademarks.html">PATENTS & TRADEMARKS</a></li>
             </ul>
         </li>
         <li><a>BUILDING OLIN</a>
             <ul id="dropdown">
-                <li><a href="../website-files/olin-subpages/AHS.html">AHS CURRICULUM</a></li>
-                <li><a href="../website-files/olin-subpages/ECE.html">ECE CURRICULUM</a></li>
-                <li><a href="../website-files/olin-subpages/integrated-eng.html">INTEGRATED ENGINEERING & MUSIC/AHS</a></li>
-                <li><a href="../website-files/olin-subpages/first-year.html">THE FIRST YEAR</a></li>
-                <li><a href="../website-files/olin-subpages/music-program.html">CREATING A MUSIC PROGRAM FROM SCRATCH</a></li>
+                <li><a href="olin-subpages/AHS.html">AHS CURRICULUM</a></li>
+                <li><a href="olin-subpages/ECE.html">ECE CURRICULUM</a></li>
+                <li><a href="olin-subpages/integrated-eng.html">INTEGRATED ENGINEERING & MUSIC/AHS</a></li>
+                <li><a href="olin-subpages/first-year.html">THE FIRST YEAR</a></li>
+                <li><a href="olin-subpages/music-program.html">CREATING A MUSIC PROGRAM FROM SCRATCH</a></li>
             </ul>
         </li>
         <li><a href=#>ARCHIVE</a></li>
@@ -53,7 +53,7 @@
 
 <body>
     <div class="bio-container">
-        <img src="../website-files/website-images/diana_outside.JPG" alt="Headshot of Diana" class="headshot">
+        <img src="website-images/diana_outside.JPG" alt="Headshot of Diana" class="headshot">
 
             <p>Diana Dabby has taught at MIT, Tufts University, and the Juilliard School.  She holds degrees in music and electrical engineering from Vassar, Mills, C.C.N.Y., and MIT.</p>
 
@@ -66,7 +66,7 @@
         <div class="centered-container">
             <a href="about.html" class="intro-btn" style="margin: 10px 30px 10px 50px;">More About Diana</a>
             
-            <a href="../website-files/website-documents/Diana Dabby CV.pdf" download  target="_blank" class="intro-btn">Curriculum Vitae</a>
+            <a href="website-documents/Diana Dabby CV.pdf" download  target="_blank" class="intro-btn">Curriculum Vitae</a>
         </div>
     </div>
 
