--- a/eng-subpages/masters.html
+++ b/eng-subpages/masters.html
@@ -11,8 +11,7 @@
 <!-- Navigation Bar -->
 <nav class="navbar">
     <ul>
-        <li><a href="../index.html"><img src="../website-images/signal-logo.jpg" alt="" width="20" height="20"></a></li>
-        
+        <li><a href="index.html">HOME</a></li>
         <li><a href="../about.html">ABOUT</a></li>
         <li><a>MUSIC</a>
             <ul id="dropdown">
