--- a/music-subpages/musical-works.html
+++ b/music-subpages/musical-works.html
@@ -11,7 +11,7 @@
 <!-- Navigation Bar -->
 <nav class="navbar">
     <ul>
-        <li><a href="index.html"><img src="/website-files/website-images/signal-logo.jpg" alt="" width="20" height="20"></a></li>
+        <li><a href="index.html">HOME</a></li>
         
         <li><a href="about.html">ABOUT</a></li>
         <li><a>MUSIC</a>
