--- a/music.html
+++ b/music.html
@@ -1,27 +1,49 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>RECORDINGS</title>
-        <meta charset="utf-8">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="css/styles.css">
-    </head>
+<head>
+    <title>Diana Dabby's Portfolio</title>
 
-    <div class="container">
-        <nav class="navbar">
-            <ul>
-                <li><a href="home.html"><img src="../images/signal-logo.jpg" alt="" width="20" height="20"></a></li> <!-- Add logo image later-->
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="recordings.html">RECORDINGS</a>
-                    <ul id="dropdown">
-                        <li><a href=#>SOLO WORK</a></li>
-                        <li><a href=#>COMPOSITIONS</a></li>
-                        <li><a href=#>ARRANGEMENTS</a></li>
-                    </ul>
-                </li>
-                <li><a href="mvp.html">MUSICAL VARIATIONS PROJECT</a></li>
-                <li><a href="olin.html">BUILDING OLIN</a></li>
+    <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+</head>
+
+<!-- Navigation Bar -->
+<nav class="navbar">
+    <ul>
+        <li><a href="index.html"><img src="website-images/signal-logo.jpg" alt="" width="20" height="20"></a></li>
+        
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a>MUSIC</a>
+            <ul id="dropdown">
+                <li><a href="music-subpages/musical-works.html">MUSICAL WORKS</a></li>
+                <li><a href="music-subpages/orch-arrangments.html">ORCHESTRAL ARRANGEMENTS</a></li>
+                <li><a href="music-subpages/scores.html">SCORES</a></li>
             </ul>
-        </nav>
-    </div>
+        </li>
+        <li><a>MUSIC & ENGINEERING</a>
+            <ul id="dropdown">
+                <li><a href="music-eng-subpages/publication-science.html">PUBLICATION IN SCIENCE</a></li>
+                <li><a href="music-eng-subpages/cantovario.html">CANTOVARIO</a></li>
+                website                <li><a href="music-eng-subpages/engineers-orchestra.html">ENGINEERS' ORCHESTRA</a></li>
+            </ul>
+        </li>
+        <li><a>ENGINEERING</a>
+            <ul id="dropdown">
+                <li><a href="eng-subpages/masters.html">MASTER'S THESIS</a></li>
+                <li><a href="eng-subpages/patents-trademarks.html">PATENTS & TRADEMARKS</a></li>
+            </ul>
+        </li>
+        <li><a>BUILDING OLIN</a>
+            <ul id="dropdown">
+                <li><a href="olin-subpages/AHS.html">AHS CURRICULUM</a></li>
+                <li><a href="olin-subpages/ECE.html">ECE CURRICULUM</a></li>
+                <li><a href="olin-subpages/integrated-eng.html">INTEGRATED ENGINEERING & MUSIC/AHS</a></li>
+                <li><a href="olin-subpages/first-year.html">THE FIRST YEAR</a></li>
+                <li><a href="olin-subpages/music-program.html">CREATING A MUSIC PROGRAM FROM SCRATCH</a></li>
+            </ul>
+        </li>
+        <li><a href=#>ARCHIVE</a></li>
+    </ul>
+</nav>
 </html>
