Adding in supp. material for olin subpages

--- a/music-eng-subpages/engineers-orchestra.html
+++ b/music-eng-subpages/engineers-orchestra.html
@@ -103,6 +103,20 @@
         <p>With respect to Map 2, the Engineers’ Conductorless Orchestra projects unite music and engineering by speaking directly to student engineer-musicians within an engineering school environment.  The thematic table below captures the role played by my three overarching themes in producing the Engineers’ Conductorless Orchestra, thus addressing Map 3.</p>
 
         <b>include chart? and figure 16</b>
+
+        following example performances by the OCO 2008-2019.</p>
+
+        <ol>
+            <li><a href="https://youtu.be/knulC0k1r5M">Haydn Sinfonia No. 48 in C Major, “Maria Theresia”:  first movement (Allegro), Spring 2008.</a></li>
+            <li><a href="http://www.youtube.com/watch?v=ZFd453aYudU&feature=mfu_in_order&list=UL">Composite video excerpts (Holst:  Jupiter from The Planets and Lee Jisu:  Arirang Rhapsody), Spring 2011</a></li>
+            <li><a href="https://youtu.be/yyzEQ6n6OYA">Arturo Marquez Danzon No. 2, Spring 2013</a></li>
+            <li><a href="https://www.youtube.com/watch?v=VlkAZG106ek">Beethoven Creatures of Prometheus, Fall 2015 </a></li>
+            <li><a href="https://youtu.be/zix7IweadvM">Saint-Saens Danse Bacchanale, Fall 2015 </a></li>
+            <li><a href="http://bit.ly/OCO_Dvorak9th">Dvorak Symphony No. 9 in E minor:  fourth movement (Allegro con fuoco)—Spring 2016</a></li>
+            <li><a href="https://www.youtube.com/watch?v=BA5F48usRIo">Gershwin An American in Paris:  Spring 2017 </a></li>
+            <li><a href="https://www.youtube.com/watch?v=hTNUGRU4Pl8">Mozart Serenade in Bb for 13 Winds, K. 361:  Finale—Spring 2019</a></li>
+            <li><a href="https://www.youtube.com/watch?v=a9IkNITe1fE">Berlioz “Marche Hongroise” from La Damnation de Faust:  Spring 2019</a></li>
+        </ol>
     </div>
 
 </body>
