--- a/olin-subpages/AHS.html
+++ b/olin-subpages/AHS.html
@@ -56,14 +56,7 @@
 
         <p>Not wanting to redefine classes already in existence at our neighboring partner institutions, I designed courses that spoke directly to the Olin student. For example, the Olin Conductorless Orchestra (OCO) is the only orchestra composed entirely of student engineers in the nation—and it functions without a conductor, on purpose. The Wired Ensemble takes engineers on a tour of the orchestra, including voice; after learning about each family of instruments, they write music for these instruments and voices.  In both these <b>disciplinary</b> courses, students learn by doing, supported by the <b>three overarching themes</b> that pervade my curricular development and work (Map 3).</p>
 
-        <p>The below music courses bring “balance”, “creative energy”, and “emotional connection” to our students (their descriptors), not only <b>developing the “whole person”</b> which Prof. Lynn Andrea Stein often spoke about in the first year of the College (AY 00-01), but also displaying these traits to prospective students and their families, as seen in the “Music Program Impact” video links below.  These short videos conveying the scope and impact of the music program show that Olin doesn’t just talk the talk, but really walks the walk, thus <b>building the integrity of the college and helping sustain it.</b></p>
-
-        <ol>
-            <li><a href="https://youtu.be/uiryNONUTZA">Evidence of Music Program Impact from 2015 Candidates Weekend 3</a></li>
-            <li><a href="https://youtu.be/i318wEnXnmw">Origins of OCO as described in the Q&A at Candidates Weekends 2019</a></li>
-            <li><a href="https://youtu.be/HwWwH3QSyqk">Origins of the Olin Concert Hallway Steinway B in the Q&A at Candidates Weekends 2019</a></li>
-            <li><a href="https://youtu.be/5i-C5YXAJgM">Q&A on the Music Program from Candidates Weekends 2019</a></li>        
-        </ol>
+        <p>The below music courses bring “balance”, “creative energy”, and “emotional connection” to our students (their descriptors), not only <b>developing the “whole person”</b> which Prof. Lynn Andrea Stein often spoke about in the first year of the College (AY 00-01), but also displaying these traits to prospective students and their families, as seen in the “Music Program Impact” video links given in the <a href="music-program.html">Building a Music Program from Scratch</a> page. These short videos conveying the scope and impact of the music program show that Olin doesn’t just talk the talk, but really walks the walk, thus <b>building the integrity of the college and helping sustain it.</b></p>
 
         <p>These courses have also brought musical opportunities for Babson and Wellesley students.  For example, we were fortunate to have Stella Joo as a clarinetist in OCO during her four years at Babson College.  She and Alex Niswander ‘12 were the best clarinets we ever had.  She wrote the following letter upon graduating Babson:</p>
 
@@ -147,19 +140,7 @@
 
         <p>As will be discussed more fully in <a href="../music-eng-subpages/engineers-orchestra.html">The Engineers’ Conductorless Orchestra</a>, a conductorless orchestra can serve as an experiential lab for developing leadership, teamwork, and communication skills in engineering students.</p>
 
-        <p>For more OCO YouTube performances, including complete recordings of works by Haydn, Mozart, Berlioz, Dvorak, Gershwin, Arturo Marquez, and others, please see the following example performances by the OCO 2008-2019.</p>
-
-        <ol>
-            <li><a href="https://youtu.be/knulC0k1r5M">Haydn Sinfonia No. 48 in C Major, “Maria Theresia”:  first movement (Allegro), Spring 2008.</a></li>
-            <li><a href="http://www.youtube.com/watch?v=ZFd453aYudU&feature=mfu_in_order&list=UL">Composite video excerpts (Holst:  Jupiter from The Planets and Lee Jisu:  Arirang Rhapsody), Spring 2011</a></li>
-            <li><a href="https://youtu.be/yyzEQ6n6OYA">Arturo Marquez Danzon No. 2, Spring 2013</a></li>
-            <li><a href="https://www.youtube.com/watch?v=VlkAZG106ek">Beethoven Creatures of Prometheus, Fall 2015 </a></li>
-            <li><a href="https://youtu.be/zix7IweadvM">Saint-Saens Danse Bacchanale, Fall 2015 </a></li>
-            <li><a href="http://bit.ly/OCO_Dvorak9th">Dvorak Symphony No. 9 in E minor:  fourth movement (Allegro con fuoco)—Spring 2016</a></li>
-            <li><a href="https://www.youtube.com/watch?v=BA5F48usRIo">Gershwin An American in Paris:  Spring 2017 </a></li>
-            <li><a href="https://www.youtube.com/watch?v=hTNUGRU4Pl8">Mozart Serenade in Bb for 13 Winds, K. 361:  Finale—Spring 2019</a></li>
-            <li><a href="https://www.youtube.com/watch?v=a9IkNITe1fE">Berlioz “Marche Hongroise” from La Damnation de Faust:  Spring 2019</a></li>
-        </ol>
+        <p>For more OCO YouTube performances, including complete recordings of works by Haydn, Mozart, Berlioz, Dvorak, Gershwin, Arturo Marquez, and others, please see the example performances displayed in <a href="../music-eng-subpages/engineers-orchestra.html">The Engineers’ Conductorless Orchestra</a>.</p>
     </div>
 
     <h3>II. THE WIRED ENSEMBLE:  INSTRUMENTS, VOICES, PLAYERS (OFFERED EVERY FALL TERM, 2003 - PRESENT)</h3>
@@ -210,7 +191,14 @@
         {insert image}
         <p class="caption">The 2018 Wired Ensemble after performances of their final project compositions during Olin’s December Expo.</p>
 
-        <p>Additional material, the program, and student scores can be found <a href="../music-subpages/scores.html">here.</a></p>
+        <p>For additional material from the Wired Ensemble class, including example assignments and student work, see the links below.</p>
+
+        <ul>
+            <li><a href="/website-documents/supplementary-materials/olin-supplementary/ahs-curriculum/A-II-A-2-wired-student-scores.pdf">Student scores examples</a></li>
+            <li><a href="/website-documents/supplementary-materials/olin-supplementary/ahs-curriculum/A-II-A-2-wired-program.pdf">Wired program example</a></li>
+            <li><a href="/website-documents/supplementary-materials/olin-supplementary/ahs-curriculum/A-II-A-2-composition-analysis.pdf">Composition analysis assignment example</a></li>
+            <li><a href="/website-documents/supplementary-materials/olin-supplementary/ahs-curriculum/A-II-A-2-analysis-assignment.pdf">Analysis assignment examples</a></li>
+        </ul>
     </div>
 </body>
 
