--- a/olin-subpages/ECE.html
+++ b/olin-subpages/ECE.html
@@ -80,7 +80,14 @@
 
     <p>In sum, as a disciplinary ECE course, DSP develops students through three overarching themes:  lifelong learning, intrinsic motivation, and the creative process (stimulation/impetus, preparation/scaffolding, applications, feedback, revision, and effective communication).  As part of the ECE core curriculum, it has helped build & sustain the college, contributing to the ABET accreditation process as well. </p>
 
-    <p>{Include PDF with supplementary materials II-B-1A, B, C and Appendix II-B-1}</p>
+    <p>Please see the links below for DSP-related documents.</p>
+
+    <ul>
+        <li><a href="/website-documents/supplementary-materials/olin-supplementary/ece-curriculum/II-B-1A-DSP-schedule.pdf">Fall 2016 course schedule</a></li>
+        <li><a href="/website-documents/supplementary-materials/olin-supplementary/ece-curriculum/II-B-1B-DSP-example-material.pdf">Example course material</a></li>
+        <li><a href="/website-documents/supplementary-materials/olin-supplementary/ece-curriculum/II-B-1C-DSP-developed-topics.pdf">List of course topics</a></li>
+        <li><a href="/website-documents/supplementary-materials/olin-supplementary/ece-curriculum/A-II-B-1-DSP-example-work.pdf">DSP example work</a>, containing examples of DSP assignments, labs, and student work, including a student’s final project, M-synth.</li>
+    </ul>
 </div>
 
 <h2>II. SIGNALS AND SYSTEMS:  2003, 2004, 2005, 2006, 2007, (ON LEAVE SPRING 2008), 2012, 2019</h2>
@@ -109,7 +116,14 @@
 
     <p>In sum, as a disciplinary ECE course, Signals and Systems develops students by means of three overarching themes:  lifelong learning, intrinsic motivation, and the creative process (encompassing stimulation/impetus, preparation/scaffolding, application, feedback, review, and effective communication).  Like the DSP course, it’s part of the ECE core curriculum requirements for the major; as such, it has helped build & sustain the college, contributing to the ABET accreditation process as well. </p>
 
-    <p>{Include PDF of supplementary Materials II-B-2a, b, and c and Appendix II-B-2.}</p>
+    <p>For more Signals and Systems resources, check the links below.</p>
+
+    <ul>
+        <li><a href="/website-documents/supplementary-materials/olin-supplementary/ece-curriculum/II-B-2A-signals-schedule.pdf">2019 course schedule</a></li>
+        <li><a href="/website-documents/supplementary-materials/olin-supplementary/ece-curriculum/II-B-2B-signals-example-material.pdf">Example material</a></li>
+        <li><a href="/website-documents/supplementary-materials/olin-supplementary/ece-curriculum/II-B-2C-signals-developed-topics.pdf">List of course topics</a></li>
+        <li><a href="/website-documents/supplementary-materials/olin-supplementary/ece-curriculum/A-II-B-2-signals-example-work.pdf">Examples of assignments and student work</a></li>
+    </ul>
 </div>
 
 <h2>III. Engineering Systems Analysis</h2>
