--- a/olin-subpages/integrated-eng.html
+++ b/olin-subpages/integrated-eng.html
@@ -65,7 +65,7 @@
             
         <p>Students in the course came from backgrounds in engineering and/or the liberal arts.  To understand the material presented in these modules, they engaged in lifelong learning (including self-teaching unfamiliar aspects of music or math), intrinsic motivation (by virtue of enrolling in the course, they indicated a curiosity about connections between engineering and the acoustic world around them which further manifested itself in the questions they asked), preparation/scaffolding (provided for them by an excellent team of instructors), application (how the harmonic series permeates engineering and music, e.g., string harmonics demonstrated live with a student cellist, wave phenomena, and my own example of how I re-orchestrated the Dvorak Eighth Symphony for a small orchestra by harnessing the overtone series to create a coherent group sound), effective communication (by providing different in-class methods for conveying the material at hand, e.g., videos, concept handouts, audio examples, and demonstrating at the piano), and stimulation/impetus (by exposing the students to different avenues for interdisciplinary connection).</p>
 
-        <p>{Can't find the PDF discussed in Appendix II-C-1?} contains the following course materials that I prepared for these two Harvard SEAS classes on the topic “What’s so great about the overtone series?”</p>
+        <p>This <a href="/website-documents/supplementary-materials/olin-supplementary/A-II-C-1-uniting-AHS-eng.pdf">Uniting AHS with Engineering</a> document contains the following course materials that I prepared for these two Harvard SEAS classes on the topic “What’s so great about the overtone series?”</p>
 
         <ol>
             <li>The overtone series pops out of the wave equation</li>
@@ -101,7 +101,12 @@
 
         <p>Initially, I created part II, not only to link with part I, but also in response to student requests for a sequel to the Wired Ensemble.  Thus, the course drew on their intrinsic motivation to make music.  Part II provides ‘just-in-time’ harmonic and contrapuntal theory for the study of instrumentation with an emphasis on composing for combinations of strings, woodwinds, brass, and percussion (lifelong learning).  Equipped with a technical understanding of orchestral instruments as a result of Part I, students connect the art of ensemble writing to the physical understanding of instruments (stimulation/impetus).  As a result, they can reason from several vantage points as to why, for example, a particular harmonic voicing might be preferable to another (effective communication).  Finally, while engaged in writing short studies for mixed ensembles (preparation/scaffolding) that underwent review (feedback) and revision, students looked forward to composing their Opus 1, a culminating work for multiple instruments (application).</p>
 
-        <p>{Include Supplemental II-C-3 here}</p>
+        <p>A final project composition from this course can be found below.</p>
+
+        <div class="centered-container">
+            <iframe width="560" height="315" src="https://youtu.be/g4wS3piRKHw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <p class="caption">Engineering the Orchestra, Part II, Final Project Composition. The performance shows a student combining flute, clarinet, guitar, and trumpet—an unusual instrumentation that combines four non-homogeneous instruments.</p>
     </div>
 
     <h2>IV. HEROES FOR THE RENAISSANCE ENGINEER:  LEONARDO, NABOKOV, BACH, AND BORODIN (2004, 2005, 2006, 2007) </h2>
