--- a/olin-subpages/music-program.html
+++ b/olin-subpages/music-program.html
@@ -75,6 +75,13 @@
         <p>Project L occupies the music space, yet it also lies in the engineering space because it has given our engineering students opportunities and venues for making music (Map 2).   The table below captures the role played by each of my three overarching themes in building & sustaining the Music Program, thereby speaking to Map 3.</p>
 
         <b>incude chart?</b>
+
+        <ol>
+            <li><a href="https://youtu.be/uiryNONUTZA">Evidence of Music Program Impact from 2015 Candidates Weekend 3</a></li>
+            <li><a href="https://youtu.be/i318wEnXnmw">Origins of OCO as described in the Q&A at Candidates Weekends 2019</a></li>
+            <li><a href="https://youtu.be/HwWwH3QSyqk">Origins of the Olin Concert Hallway Steinway B in the Q&A at Candidates Weekends 2019</a></li>
+            <li><a href="https://youtu.be/5i-C5YXAJgM">Q&A on the Music Program from Candidates Weekends 2019</a></li>        
+        </ol>
     </div>
 </body>
 </html>
