Inputted up to Supp. Material IV-H-3

--- a/eng-subpages/patents-trademarks.html
+++ b/eng-subpages/patents-trademarks.html
@@ -58,9 +58,9 @@
 
     <p>My latest patent application (provisional + utility submitted 2017-18, pending) includes the new variation  algorithms that produced the mash-ups currently on www.cantovario.com.  They capture a breakthrough algorithm that occurred to me one morning in June 2017.   The breakthrough algorithm enables complete mashups of songs, so that the mashups themselves constitute fully formed songs.  I filed a Provisional patent application in September 2017 and a follow-up Utility patent application in September 2018.  N.B:  A mashup is a form of musical variation; e.g., J.S. Bach wrote a mashup for the 30th variation of his Goldberg Variations.</p>
 
-    <p>ADD LINK: The CantoVario project will be discussed to a greater extent in Section IV of this dossier.</p>
+    <p>The CantoVario project is discussed to a greater extent in <a href="../music-eng-subpages/cantovario.html" >"CantoVario"</a>.</p>
 
-    <p>INCLUDE MATERIALS: Supplementary Materials III-F contains my recent patents issued by the USPTO.</p>
+    <p>View my <a href="../website-documents/supplementary-materials/eng-supplementary/III-F-patents-trademarks.pdf" target="_blank">recent patents</a> issued by the USPTO.</p>
 
     <p>In sum, the patents (and trademarks) arising from my musical variations/chaos science projects show Leadership and Impact with respect to Olin’s faculty goal of External Impact since they underpin original and innovative work (the CantoVario Project) recognized by the National Science Foundation (NSF), the MIT Venture Mentoring Service (VMS), the USPTO, and the journal Science.  Like the Science article, they fuse the disciplines of music and engineering (Map 2).  The thematic table below captures the role played by each of three overarching themes in creating and writing these patents, thus providing detail for Map 3.</p>
 
