--- a/music-subpages/musical-works.html
+++ b/music-subpages/musical-works.html
@@ -68,13 +68,50 @@
 
     <b>insert figure 11</b>
 
+    <div class="centered-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/UQj2EmfFgAg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+    <p class="caption">Recorded live on the Tenth Anniversary of 9/11, this YouTube video captures the performance from the middle of the “93” movement to the “End.” [In the process of establishing this new link, the previous 500 views and comments were lost.]</p>
+
+    <p class="small-caption">Performers:  Ashley Addington, flute; Jennifer Slowik, oboe; Ray Jackendoff, clarinet; Philipp Staeudlin, alto saxophone; Dana Russian, trumpet soloist; Dana Oakes, trumpet; Jeffrey Means, percussion; Jonathan Hess, percussion; Matt Sharrock, percussion; John McDonald, piano; Jae Young Lee, violinTufts chamber Singers; and Jamie Kirsch, conductor.</p>
+
     <p><b>Tre Studi di Colore </b> (2012)</p>
 
     <p>These three études for solo piano – Azzurro (for right hand alone), Rosso (for left hand alone), and Violetto (for two hands) – offer a dramatic and athletic tour de force for the pianist.  Their interpretation relies on certain interpretive slants, e.g., hearing the piano embrace different instruments of the orchestra (and at times, a military band).  Commissioned by the Three-College Collaboration (Babson, Olin, Wellesley) for the Jubilee Trio’s Houghton Chapel concert, Wellesley College, Nov. 2012, these études were later performed abroad (May 30, 2013) by pianist Jongsun Lee who won an emerging artists’ competition awarding her a debut recital at Youngsan Art Hall in Seoul, Korea.</p>
 
+    <!-- 560 x 315 75% -->
+    <div class="video-grid-container">
+        <div class="video-spacing">
+            <iframe width="420" height="236" src="https://www.youtube.com/embed/mRrJhR4OmEQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <div class="video-spacing">
+            <iframe width="420" height="236" src="https://www.youtube.com/embed/j1mWqnuUkA8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <div class="video-spacing">
+            <iframe width="420" height="236" src="https://www.youtube.com/embed/yH5X84zePjw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+    </div>
+    <p class="caption">YouTube videos of Tre Studi di Colore recorded by pianist Jongsun Lee at Mozart Hall, Seoul, Korea, in December 2013. Violetto (left), Rosso (middle), Azzurro (right)</p>
+
     <p><b>Fuente y Variación </b> (2013)</p>
 
     <p><em>Fuente y Variación</em> (source and variation) was commissioned by pianist Jongsun Lee for her invited artist concert sponsored by Youngsan Art Hall, Seoul, Korea, May 2013.  The piece presents another perspective on classical variation form:  first the audience hears an original piece (기원) and then a variation (변화) of it.  The variation diverges in substantive ways from the original, yet the two pieces stay connected through motivic and thematic reinterpretation.  In a broad sense, the music has become dynamic – it changes with time as a river might change from day to day, season to season, yet is still recognized in its essence.</p>
+
+    <div class="video-grid-container">
+        <div class="video-spacing">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/3vVeYwW1VNY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <div class="video-spacing">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/KSA6kJN1iyA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+    </div>
+    <p class="caption">A YouTube video of Fuente y Variación recorded by pianist Jongsun Lee at Mozart Hall, Seoul, Korea, Dec. 9, 2013. Variación (left), Fuente (right)</p>
+
+    <p><b>TEDx Talk at Seoul National University</b></p>
+    <div class="centered-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/0i3wkr7G1O4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+    <p class="caption">“Two are better than one:  composers and performers in music.”  Pianist Jongsun Lee presented her work bringing Fuente y Variación and Tre Studi di Colore from score to finished performance, Nov. 16, 2013.</p>
 
     <p><b>Who was Wissam Eid? </b> (2017)</p>
 
@@ -87,6 +124,11 @@
         <li>Rafik Hariri</li>
         <li>Wissam Eid</li>
     </ol>
+
+    <div class="centered-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Ra_AoA8SUsY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+    <p class="caption">Recorded April 17, 2017. Performers:  Gabriella Diaz, violin; David Russell, cello; and Lois Shapiro, piano.</p>
 
     <p><b>Parallel Lives—Distant Mirrors </b> (2018)</p>
 
@@ -104,9 +146,14 @@
 
     <p>The culminating movement includes a soundtrack composed of Associated Press recordings from the 2003 bombardment of Iraq, the last minutes of Iraqi TV, recorded American and Iraqi voices, among others.  Movements 2, 3, and 4, each focus on one of the Arabic voice recordings but in translation.  The text for the third movement for voice and piano can be found in the YouTube description.</p>
 
+    <div class="centered-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/xSqE22X4I8U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+    <p class="caption">Recorded live in Houghton Chapel as part of the Wellesley College Concert Series. Performers: Yong Su Clark, flute; P. Lucy McVeigh, mezzo-soprano; and Jongsun Lee, piano.</p>
+
     <b>include figure 12 and 13</b>
 
-    <p>include supplementary materials iii-g and appendix iii-g for scores</p>
+    <p>The scores for all these performances can be found <a href="/website-documents/supplementary-materials/music-supplementary/III-G-musical-scores-commissions.pdf" target="_blank">here.</a></p>
 
     <p><b>In sum</b>, the above five works lie in the disciplinary space of music (Map 2), yet all were influenced by my work with musical variations from a chaotic mapping.  They demonstrate Leadership and Impact with respect to Olin’s faculty goal of External Impact (Map 1) by reaching out to audiences in concert and online.  All five world premières were well-attended and four occurred as part of established concert series in excellent venues:  Distler Performance Hall, Perry and Marty Granoff Music Center, Tufts University Concert Series; Youngsan Art Hall Concert Series, Seoul, Korea; and Houghton Memorial Chapel, Wellesley College Concert Series.  <b>September Quartet</b> received a spontaneous standing ovation as can be seen on the YouTube video.  It has been viewed 702 times from two different YouTube uploads, the first of which (500 views) was removed in favor of the second (202 since April 2014).  The movements comprising the piano pieces <b>Tre Studi di Colore</b> (2012) and <b>Fuente y Variación</b> (2013) have a total of 1,706 views (since December 2013), showing some movements dominating others, e.g., Variación with 582 listens.  Together with <b>Who was Wissam Eid?</b>  (383 since May 2017) and <b>Parallel Lives—Distant Mirrors</b> (205 since December 2018), these five works, have reached an online audience of 3000 despite requiring longer attention spans.  All of the above speaks to Impact. </p>
 
