--- a/olin-subpages/AHS.html
+++ b/olin-subpages/AHS.html
@@ -194,10 +194,10 @@
         <p>For additional material from the Wired Ensemble class, including example assignments and student work, see the links below.</p>
 
         <ul>
-            <li><a href="/website-documents/supplementary-materials/olin-supplementary/ahs-curriculum/A-II-A-2-wired-student-scores.pdf">Student scores examples</a></li>
-            <li><a href="/website-documents/supplementary-materials/olin-supplementary/ahs-curriculum/A-II-A-2-wired-program.pdf">Wired program example</a></li>
-            <li><a href="/website-documents/supplementary-materials/olin-supplementary/ahs-curriculum/A-II-A-2-composition-analysis.pdf">Composition analysis assignment example</a></li>
-            <li><a href="/website-documents/supplementary-materials/olin-supplementary/ahs-curriculum/A-II-A-2-analysis-assignment.pdf">Analysis assignment examples</a></li>
+            <li><a href="/website-documents/supplementary-materials/olin-supplementary/ahs-curriculum/A-II-A-2-wired-student-scores.pdf" target="_blank">Student scores examples</a></li>
+            <li><a href="/website-documents/supplementary-materials/olin-supplementary/ahs-curriculum/A-II-A-2-wired-program.pdf" target="_blank">Wired program example</a></li>
+            <li><a href="/website-documents/supplementary-materials/olin-supplementary/ahs-curriculum/A-II-A-2-composition-analysis.pdf" target="_blank">Composition analysis assignment example</a></li>
+            <li><a href="/website-documents/supplementary-materials/olin-supplementary/ahs-curriculum/A-II-A-2-analysis-assignment.pdf" target="_blank">Analysis assignment examples</a></li>
         </ul>
     </div>
 </body>
