--- a/olin-subpages/ECE.html
+++ b/olin-subpages/ECE.html
@@ -83,10 +83,10 @@
     <p>Please see the links below for DSP-related documents.</p>
 
     <ul>
-        <li><a href="/website-documents/supplementary-materials/olin-supplementary/ece-curriculum/II-B-1A-DSP-schedule.pdf">Fall 2016 course schedule</a></li>
-        <li><a href="/website-documents/supplementary-materials/olin-supplementary/ece-curriculum/II-B-1B-DSP-example-material.pdf">Example course material</a></li>
-        <li><a href="/website-documents/supplementary-materials/olin-supplementary/ece-curriculum/II-B-1C-DSP-developed-topics.pdf">List of course topics</a></li>
-        <li><a href="/website-documents/supplementary-materials/olin-supplementary/ece-curriculum/A-II-B-1-DSP-example-work.pdf">DSP example work</a>, containing examples of DSP assignments, labs, and student work, including a student’s final project, M-synth.</li>
+        <li><a href="/website-documents/supplementary-materials/olin-supplementary/ece-curriculum/II-B-1A-DSP-schedule.pdf" target="_blank">Fall 2016 course schedule</a></li>
+        <li><a href="/website-documents/supplementary-materials/olin-supplementary/ece-curriculum/II-B-1B-DSP-example-material.pdf" target="_blank">Example course material</a></li>
+        <li><a href="/website-documents/supplementary-materials/olin-supplementary/ece-curriculum/II-B-1C-DSP-developed-topics.pdf" target="_blank">List of course topics</a></li>
+        <li><a href="/website-documents/supplementary-materials/olin-supplementary/ece-curriculum/A-II-B-1-DSP-example-work.pdf" target="_blank">DSP example work</a>, containing examples of DSP assignments, labs, and student work, including a student’s final project, M-synth.</li>
     </ul>
 </div>
 
@@ -119,10 +119,10 @@
     <p>For more Signals and Systems resources, check the links below.</p>
 
     <ul>
-        <li><a href="/website-documents/supplementary-materials/olin-supplementary/ece-curriculum/II-B-2A-signals-schedule.pdf">2019 course schedule</a></li>
-        <li><a href="/website-documents/supplementary-materials/olin-supplementary/ece-curriculum/II-B-2B-signals-example-material.pdf">Example material</a></li>
-        <li><a href="/website-documents/supplementary-materials/olin-supplementary/ece-curriculum/II-B-2C-signals-developed-topics.pdf">List of course topics</a></li>
-        <li><a href="/website-documents/supplementary-materials/olin-supplementary/ece-curriculum/A-II-B-2-signals-example-work.pdf">Examples of assignments and student work</a></li>
+        <li><a href="/website-documents/supplementary-materials/olin-supplementary/ece-curriculum/II-B-2A-signals-schedule.pdf" target="_blank">2019 course schedule</a></li>
+        <li><a href="/website-documents/supplementary-materials/olin-supplementary/ece-curriculum/II-B-2B-signals-example-material.pdf" target="_blank">Example material</a></li>
+        <li><a href="/website-documents/supplementary-materials/olin-supplementary/ece-curriculum/II-B-2C-signals-developed-topics.pdf" target="_blank">List of course topics</a></li>
+        <li><a href="/website-documents/supplementary-materials/olin-supplementary/ece-curriculum/A-II-B-2-signals-example-work.pdf" target="_blank">Examples of assignments and student work</a></li>
     </ul>
 </div>
 
