--- a/music-eng-subpages/engineers-orchestra.html
+++ b/music-eng-subpages/engineers-orchestra.html
@@ -26,7 +26,7 @@
             <ul id="dropdown">
                 <li><a href="../music-eng-subpages/publication-science.html">PUBLICATION IN SCIENCE</a></li>
                 <li><a href="../music-eng-subpages/cantovario.html">CANTOVARIO</a></li>
-                website                <li><a href="../music-eng-subpages/engineers-orchestra.html">ENGINEERS' ORCHESTRA</a></li>
+                <li><a href="../music-eng-subpages/engineers-orchestra.html">ENGINEERS' ORCHESTRA</a></li>
             </ul>
         </li>
         <li><a>ENGINEERING</a>
